# MechMapOnline

./: .gitignore  AGENTS.md  README.md  start.bat
backend/: main.py  pyproject.toml  repository.py  requirements.txt
backend/static/css/: main.59914877.css  main.59914877.css.map
backend/static/js/: main.06a2d1f8.js  main.06a2d1f8.js.map
backend/templates/: index.html
backend/web/: index.html
backend/web/assets/: index-8wgvNYQI.js  index-CZeQLQUi.css  index-CgK0BrEY.js  index-pVqk1-01.js
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  index.css  index.jsx
client/src/components/: AdminPanel.jsx  Arrow.jsx  AuthManager.jsx  FPSCounter.jsx  HexGrid.jsx  Hexagon.jsx  IconPicker.jsx  Line.jsx  MainWindow.jsx  RoomManager.jsx  Unit.jsx  UnitCreationDialog.jsx
client/src/utils/: unitIcons.js
frontend/: README.md  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminPanel.jsx  FPSCounter.jsx  HexGrid.jsx  MainWindow.jsx  RoomManager.jsx  Unit.jsx  UnitCreationDialog.jsx  UnitDetailsDialog.jsx  UserDatabaseDialog.jsx
frontend/src/utils/: unitIcons.js
scripts/: bootstrap-backend-linux.sh  build-ui.sh  install-systemd-service-linux.sh  setup-nginx-linux.sh
scripts/nginx/: mechmaponline.conf.template
scripts/systemd/: mechmaponline-backend.service.template
server/: db.py  main.py  repository.py  uvi.py
server/static/js/: main.4ce27fb3.js  main.4ce27fb3.js.map  main.4e22ef94.js  main.4e22ef94.js.map  main.82811e39.js  main.92444a77.js  (+8 more)
server/templates/: index.html
