[project]
name = "mechmap-backend"
version = "0.1.0"
description = "Hex Map Online FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "python-socketio>=5.12.1",
    "python-multipart>=0.0.9",
    "numpy>=2.2.2",
    "Jinja2==3.1.2",
]

[tool.uv]
package = false
